<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_gravity="center" 
>
  
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="30dip"/>
  
    <ImageButton 
        android:id="@+id/main_online"
        android:layout_width="90dip" 
        android:layout_height="90dip" 
        android:layout_gravity="center"/>

    
    　　
    　　 <TextView 
        android:layout_width="fill_parent"
        android:layout_height="30dip"
        android:text="@string/maina"
        android:gravity="top|center"
        android:textColor="#000000"/>
    　　　
    
    <ImageButton 
    	android:id="@+id/main_takephoto"
        android:layout_width="90dip" 
        android:layout_height="90dip" 
        android:src="@drawable/selectortakepicture"
        android:layout_gravity="center"/>
    　　　 
     　 <TextView 
        android:layout_width="fill_parent"
        android:layout_height="30dip"
        android:text="@string/mainb"
        android:gravity="top|center"
        android:textColor="#000000"/>
    
    　　　　 <ImageButton 
    	android:id="@+id/main_local"
        android:layout_width="90dip" 
        android:layout_height="90dip" 
        android:src="@drawable/selectorablum"
        android:layout_gravity="center"/>
        
          <TextView 
        android:layout_width="fill_parent"
        android:layout_height="30dip"
        android:text="@string/mainc"
        android:gravity="top|center"
        android:textColor="#000000"/>
    

</LinearLayout>