<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
            <LinearLayout
                android:id="@+id/login_loginlayout"
                android:layout_width="320dip"
                android:layout_height="492dip"
                android:layout_gravity="center"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/register_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn"
                    android:text="@string/loginc"
                    android:textSize="8pt" 
                    android:layout_marginBottom="30dip" 
                    />
              <RelativeLayout android:id="@+id/RelativeLayout02"
			android:paddingTop="21.0dip"
			android:paddingBottom="10.0dip" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:layout_marginLeft="15.0dip"
			android:layout_marginTop="62.0dip" 
			android:layout_marginRight="15.0dip">
			
			<EditText android:id="@+id/register_dir"
				 android:paddingLeft="45.0sp"
				android:saveEnabled="true" 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:layout_marginLeft="5.0dip"
				android:layout_marginTop="5.0dip" 
				android:layout_marginRight="5.0dip"
				android:layout_marginBottom="5.0px"
				android:hint="@string/logina"
				android:maxLength="10" 
				android:layout_alignParentTop="true" 
				
				/>
			<TextView android:textSize="16.0dip" 
			    android:textColor="#ff3f3f3f"
				android:gravity="center_vertical" 
				android:id="@+id/TextView01"
				android:paddingLeft="7.0sp" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginRight="15.0sp"
				android:text="账号"
				android:layout_alignLeft="@+id/register_dir"
				android:layout_alignTop="@+id/register_dir"
				android:layout_alignBottom="@+id/register_dir" />
			<ImageButton android:id="@+id/popupwindow"
				android:background="@drawable/more_select" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginRight="1.0dip"
				android:layout_alignTop="@+id/register_dir"
				android:layout_alignRight="@+id/register_dir"
				android:layout_alignBottom="@+id/register_dir" />
			<EditText android:id="@+id/register_pw"
				 android:paddingLeft="45.0sp"
				android:saveEnabled="true" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginRight="1.0dip"
				android:maxLength="16" android:layout_below="@+id/register_dir"
				android:layout_alignLeft="@+id/register_dir"
				android:layout_alignRight="@+id/register_dir"
				android:inputType="textPassword" />
			<TextView android:textSize="16.0dip" android:textColor="#ff3f3f3f"
				android:gravity="center_vertical" android:id="@+id/TextView02"
				android:paddingLeft="7.0sp" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="密码"
				android:layout_alignTop="@+id/register_pw"
				android:layout_alignRight="@+id/TextView01"
				android:layout_alignBottom="@+id/register_pw" />
			</RelativeLayout>
           <LinearLayout
                android:id="@+id/login_loginlayout"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="vertical" 
                android:layout_gravity="center"
                >

               <Button
                   android:id="@+id/register_login"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginBottom="30dip"
                   android:background="@drawable/btn"
                   android:text="@string/logind"
                   android:textSize="8pt" />
                <Button
                    android:id="@+id/register_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn"
                    android:textSize="8pt" 
                    android:text="@string/logine"
                    
                    />

               

                </LinearLayout>
            </LinearLayout>

</LinearLayout>